Closed Bug 1634270 Opened 4 years ago Closed 4 years ago

Fix rebase error from Bug 1623565 affecting MixedContentBlocker

Categories

(Core :: DOM: Security, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox77 --- fixed

People

(Reporter: ckerschb, Assigned: ckerschb)

References

Details

(Whiteboard: [domsecurity-active])

Attachments

(1 file)

Bug 1602318 moved the flag checks for LOAD_NORMAL_ALLOW_MIXED_CONTENT from DoURILoad() into OpenInitializedChannel() and it seems due to a rebasing error Bug 1623565 re-introduced the moved flag checks within DoURILoad().

Summary: Fix rebase error from Bug 1623565 → Fix rebase error from Bug 1623565 affecting MixedContentBlocker
Attachment #9144562 - Attachment description: Bug 1634270: Fix rebase error from Bug 1623565 affecting MixedContentBlocker. r=djg → Bug 1634270: Fix rebase error from Bug 1623565 affecting MixedContentBlocker. r=kamidphish
Pushed by mozilla@christophkerschbaumer.com:
https://hg.mozilla.org/integration/autoland/rev/f6f3342609de
Fix rebase error from Bug 1623565 affecting MixedContentBlocker. r=kamidphish
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: