Bug 1634270: Fix rebase error from Bug 1623565 affecting MixedContentBlocker. r=kamidphish

Differential Revision: https://phabricator.services.mozilla.com/D73196